added code to rebuild jar file. code for printing simple stats on reddit added